file name changes

--- a/src/views/student/results.html
+++ b/src/views/student/results.html
@@ -32,7 +32,7 @@
             </div>
 
             <div id="nav">
-                <a href="./home.html"><span class="material-symbols-rounded">home</span>Home</a>
+                <a href="./index.html"><span class="material-symbols-rounded">home</span>Home</a>
                 <a href="./courses.html"><span class="material-symbols-rounded">book_2</span>Courses</a>
                 <a href="./results.html" class="active"><span class="material-symbols-rounded">school</span>Results</a>
                 <a href="./profile.html"><span class="material-symbols-rounded">account_circle</span>Profile</a>
