--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
-@import url(/src/styles/base.css);
-@import url(/src/styles/nav.css);
-@import url(/src/styles/overlay.css);
+@import url(/public/styles/base.css);
+@import url(/public/styles/nav.css);
+@import url(/public/styles/overlay.css);
 
 @tailwind base;
 @tailwind components;
