--- a/styles.css
+++ b/styles.css
@@ -1168,6 +1168,11 @@ button:disabled:hover {
   border-bottom: 1px solid var(--body-50);
 }
 
+.table tr:hover {
+  background-color: var(--primary-50);
+  transition: .2s;
+}
+
 /* Form elements */
 
 .input {
@@ -1952,12 +1957,32 @@ video {
   top: .75rem;
 }
 
+.top-6{
+  top: 1.5rem;
+}
+
+.left-0{
+  left: 0px;
+}
+
+.left-\[50\%\]{
+  left: 50%;
+}
+
+.right-2{
+  right: 0.5rem;
+}
+
 .-z-10{
   z-index: -10;
 }
 
 .z-10{
   z-index: 10;
+}
+
+.z-20{
+  z-index: 20;
 }
 
 .z-50{
@@ -1982,6 +2007,34 @@ video {
 
 .col-span-7{
   grid-column: span 7 / span 7;
+}
+
+.col-span-4{
+  grid-column: span 4 / span 4;
+}
+
+.col-span-5{
+  grid-column: span 5 / span 5;
+}
+
+.row-span-1{
+  grid-row: span 1 / span 1;
+}
+
+.row-span-5{
+  grid-row: span 5 / span 5;
+}
+
+.row-span-6{
+  grid-row: span 6 / span 6;
+}
+
+.-mt-2{
+  margin-top: -0.5rem;
+}
+
+.-mt-5{
+  margin-top: -1.25rem;
 }
 
 .mb-2{
@@ -2014,6 +2067,46 @@ video {
 
 .mt-8{
   margin-top: 2rem;
+}
+
+.-mt-4{
+  margin-top: -1rem;
+}
+
+.mt-16{
+  margin-top: 4rem;
+}
+
+.mt-\[3\.5rem\]{
+  margin-top: 3.5rem;
+}
+
+.mt-\[3\.8rem\]{
+  margin-top: 3.8rem;
+}
+
+.mt-\[3\.7rem\]{
+  margin-top: 3.7rem;
+}
+
+.mt-\[7rem3\.\]{
+  margin-top: 7rem3.;
+}
+
+.mt-\[7rem\]{
+  margin-top: 7rem;
+}
+
+.mt-\[\.7rem\]{
+  margin-top: .7rem;
+}
+
+.mt-\[\.5rem\]{
+  margin-top: .5rem;
+}
+
+.block{
+  display: block;
 }
 
 .flex{
@@ -2052,12 +2145,36 @@ video {
   height: 8rem;
 }
 
+.h-36{
+  height: 9rem;
+}
+
+.h-5{
+  height: 1.25rem;
+}
+
+.h-7{
+  height: 1.75rem;
+}
+
+.h-72{
+  height: 18rem;
+}
+
 .h-8{
   height: 2rem;
 }
 
+.h-\[1\.9rem\]{
+  height: 1.9rem;
+}
+
 .h-\[25rem\]{
   height: 25rem;
+}
+
+.h-\[88dvh\]{
+  height: 88dvh;
 }
 
 .h-full{
@@ -2068,8 +2185,20 @@ video {
   height: 100vh;
 }
 
+.h-\[100dvh\]{
+  height: 100dvh;
+}
+
+.h-80{
+  height: 20rem;
+}
+
 .w-10{
   width: 2.5rem;
+}
+
+.w-12{
+  width: 3rem;
 }
 
 .w-16{
@@ -2084,6 +2213,10 @@ video {
   width: 6rem;
 }
 
+.w-28{
+  width: 7rem;
+}
+
 .w-3{
   width: 0.75rem;
 }
@@ -2092,16 +2225,16 @@ video {
   width: 8rem;
 }
 
+.w-5{
+  width: 1.25rem;
+}
+
 .w-7{
   width: 1.75rem;
 }
 
 .w-72{
   width: 18rem;
-}
-
-.w-8{
-  width: 2rem;
 }
 
 .w-80{
@@ -2124,12 +2257,36 @@ video {
   width: 1px;
 }
 
+.w-\[20\%\]{
+  width: 20%;
+}
+
+.w-\[80\%\]{
+  width: 80%;
+}
+
 .w-full{
   width: 100%;
 }
 
 .w-screen{
   width: 100vw;
+}
+
+.w-\[100dvw\]{
+  width: 100dvw;
+}
+
+.w-\[dvw\]{
+  width: dvw;
+}
+
+.w-\[95dvw\]{
+  width: 95dvw;
+}
+
+.max-w-full{
+  max-width: 100%;
 }
 
 .shrink-0{
@@ -2143,6 +2300,65 @@ video {
 .-translate-y-\[\.75rem\]{
   --tw-translate-y: -.75rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-\[-50\%\]{
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-\[50\%\]{
+  --tw-translate-x: 50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-x-\[50\%\]{
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-\[50\%\]{
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-x-\[10\%\]{
+  --tw-translate-x: -10%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-x-\[100\%\]{
+  --tw-translate-x: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-x-\[-100\%\]{
+  --tw-translate-x: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-\[-100\%\]{
+  --tw-translate-x: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-x-\[80\%\]{
+  --tw-translate-x: -80%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-x-\[0\%\]{
+  --tw-translate-x: -0%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-\[25\%\]{
+  --tw-translate-x: 25%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-context-menu{
+  cursor: context-menu;
 }
 
 .cursor-pointer{
@@ -2177,6 +2393,22 @@ video {
 
 .grid-cols-5{
   grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
+.grid-cols-6{
+  grid-template-columns: repeat(6, minmax(0, 1fr));
+}
+
+.grid-cols-7{
+  grid-template-columns: repeat(7, minmax(0, 1fr));
+}
+
+.grid-rows-6{
+  grid-template-rows: repeat(6, minmax(0, 1fr));
+}
+
+.grid-rows-7{
+  grid-template-rows: repeat(7, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -2235,6 +2467,11 @@ video {
   gap: 1.5rem;
 }
 
+.gap-x-10{
+  -moz-column-gap: 2.5rem;
+       column-gap: 2.5rem;
+}
+
 .gap-x-4{
   -moz-column-gap: 1rem;
        column-gap: 1rem;
@@ -2242,6 +2479,10 @@ video {
 
 .gap-y-16{
   row-gap: 4rem;
+}
+
+.gap-y-5{
+  row-gap: 1.25rem;
 }
 
 .overflow-hidden{
@@ -2281,8 +2522,30 @@ video {
   border-bottom-right-radius: 9999px;
 }
 
+.rounded-t{
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+}
+
+.rounded-l{
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+
+.rounded-br{
+  border-bottom-right-radius: 0.25rem;
+}
+
+.rounded-tr{
+  border-top-right-radius: 0.25rem;
+}
+
 .border{
   border-width: 1px;
+}
+
+.border-b{
+  border-bottom-width: 1px;
 }
 
 .border-l{
@@ -2293,12 +2556,20 @@ video {
   border-right-width: 1px;
 }
 
+.border-t{
+  border-top-width: 1px;
+}
+
 .border-t-2{
   border-top-width: 2px;
 }
 
 .border-dashed{
   border-style: dashed;
+}
+
+.border-\[var\(--primary\)\]{
+  border-color: var(--primary);
 }
 
 .border-slate-300{
@@ -2309,6 +2580,22 @@ video {
 .border-slate-400{
   --tw-border-opacity: 1;
   border-color: rgb(148 163 184 / var(--tw-border-opacity));
+}
+
+.border-b-\[var\(--black-100\)\]{
+  border-bottom-color: var(--black-100);
+}
+
+.border-l-\[var\(--black-100\)\]{
+  border-left-color: var(--black-100);
+}
+
+.border-r-\[var\(--black-100\)\]{
+  border-right-color: var(--black-100);
+}
+
+.border-t-\[var\(--black-100\)\]{
+  border-top-color: var(--black-100);
 }
 
 .border-t-\[var\(--body-600\)\]{
@@ -2332,14 +2619,34 @@ video {
   background-color: var(--primary-50);
 }
 
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-red-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+
 .bg-blue-400{
   --tw-bg-opacity: 1;
   background-color: rgb(96 165 250 / var(--tw-bg-opacity));
 }
 
-.bg-white{
+.bg-blue-200{
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
+}
+
+.bg-red-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 242 242 / var(--tw-bg-opacity));
+}
+
+.bg-green-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
 }
 
 .object-cover{
@@ -2372,6 +2679,11 @@ video {
   padding-right: 0.5rem;
 }
 
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
@@ -2380,6 +2692,21 @@ video {
 .py-16{
   padding-top: 4rem;
   padding-bottom: 4rem;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.px-1{
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 
 .pb-10{
@@ -2420,6 +2747,22 @@ video {
 
 .pt-10{
   padding-top: 2.5rem;
+}
+
+.pb-5{
+  padding-bottom: 1.25rem;
+}
+
+.pb-20{
+  padding-bottom: 5rem;
+}
+
+.pb-1{
+  padding-bottom: 0.25rem;
+}
+
+.pb-16{
+  padding-bottom: 4rem;
 }
 
 .text-left{
@@ -2481,6 +2824,11 @@ video {
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .text-xs{
@@ -2569,16 +2917,33 @@ body {
   color: var(--body-200);
 }
 
+.hover\:rounded:hover{
+  border-radius: 0.25rem;
+}
+
 .hover\:bg-\[var\(--accent-600\)\]:hover{
   background-color: var(--accent-600);
+}
+
+.hover\:bg-\[var\(--primary-50\)\]:hover{
+  background-color: var(--primary-50);
 }
 
 .hover\:bg-\[var\(--primary-700\)\]:hover{
   background-color: var(--primary-700);
 }
 
+.hover\:bg-red-500:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
 .hover\:font-semibold:hover{
   font-weight: 600;
+}
+
+.hover\:text-\[var\(--danger-600\)\]:hover{
+  color: var(--danger-600);
 }
 
 .hover\:text-\[var\(--primary-700\)\]:hover{
@@ -2588,6 +2953,11 @@ body {
 .hover\:text-red-500:hover{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
+.hover\:text-white:hover{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover{
@@ -2615,6 +2985,14 @@ body {
     width: 80%;
   }
 
+  .md\:w-auto{
+    width: auto;
+  }
+
+  .md\:w-full{
+    width: 100%;
+  }
+
   .md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -2634,6 +3012,11 @@ body {
 
   .md\:self-center{
     align-self: center;
+  }
+
+  .md\:bg-blue-400{
+    --tw-bg-opacity: 1;
+    background-color: rgb(96 165 250 / var(--tw-bg-opacity));
   }
 
   .md\:text-left{
@@ -2666,6 +3049,18 @@ body {
     top: 0px;
   }
 
+  .lg\:top-5{
+    top: 1.25rem;
+  }
+
+  .lg\:top-6{
+    top: 1.5rem;
+  }
+
+  .lg\:-z-10{
+    z-index: -10;
+  }
+
   .lg\:col-span-1{
     grid-column: span 1 / span 1;
   }
@@ -2676,6 +3071,38 @@ body {
 
   .lg\:col-span-3{
     grid-column: span 3 / span 3;
+  }
+
+  .lg\:row-span-5{
+    grid-row: span 5 / span 5;
+  }
+
+  .lg\:row-span-2{
+    grid-row: span 2 / span 2;
+  }
+
+  .lg\:row-span-1{
+    grid-row: span 1 / span 1;
+  }
+
+  .lg\:mt-4{
+    margin-top: 1rem;
+  }
+
+  .lg\:mt-5{
+    margin-top: 1.25rem;
+  }
+
+  .lg\:mt-10{
+    margin-top: 2.5rem;
+  }
+
+  .lg\:mt-16{
+    margin-top: 4rem;
+  }
+
+  .lg\:mt-14{
+    margin-top: 3.5rem;
   }
 
   .lg\:block{
@@ -2692,6 +3119,26 @@ body {
 
   .lg\:h-\[100\%\]{
     height: 100%;
+  }
+
+  .lg\:h-8{
+    height: 2rem;
+  }
+
+  .lg\:h-4{
+    height: 1rem;
+  }
+
+  .lg\:h-6{
+    height: 1.5rem;
+  }
+
+  .lg\:h-7{
+    height: 1.75rem;
+  }
+
+  .lg\:h-auto{
+    height: auto;
   }
 
   .lg\:w-24{
@@ -2714,6 +3161,15 @@ body {
     width: auto;
   }
 
+  .lg\:w-full{
+    width: 100%;
+  }
+
+  .lg\:-translate-x-0{
+    --tw-translate-x: -0px;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
   .lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -2722,8 +3178,32 @@ body {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
+  .lg\:grid-cols-5{
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+
+  .lg\:grid-rows-8{
+    grid-template-rows: repeat(8, minmax(0, 1fr));
+  }
+
+  .lg\:grid-rows-6{
+    grid-template-rows: repeat(6, minmax(0, 1fr));
+  }
+
+  .lg\:flex-col{
+    flex-direction: column;
+  }
+
+  .lg\:items-start{
+    align-items: flex-start;
+  }
+
   .lg\:gap-1{
     gap: 0.25rem;
+  }
+
+  .lg\:gap-2{
+    gap: 0.5rem;
   }
 
   .lg\:overflow-y-visible{
@@ -2747,12 +3227,38 @@ body {
     border-color: rgb(148 163 184 / var(--tw-border-opacity));
   }
 
+  .lg\:bg-blue-400{
+    --tw-bg-opacity: 1;
+    background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+  }
+
   .lg\:p-1{
     padding: 0.25rem;
   }
 
   .lg\:p-5{
     padding: 1.25rem;
+  }
+
+  .lg\:py-1{
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
+
+  .lg\:pb-4{
+    padding-bottom: 1rem;
+  }
+
+  .lg\:text-\[\.9rem\]{
+    font-size: .9rem;
+  }
+
+  .lg\:text-\[0\.8rem\]{
+    font-size: 0.8rem;
+  }
+
+  .lg\:text-\[\]{
+    color: ;
   }
 
   .lg\:shadow-lg{
