--- a/styles.css
+++ b/styles.css
@@ -2285,6 +2285,18 @@ video {
   width: 95dvw;
 }
 
+.min-w-20{
+  min-width: 5rem;
+}
+
+.min-w-16{
+  min-width: 4rem;
+}
+
+.min-w-12{
+  min-width: 3rem;
+}
+
 .max-w-full{
   max-width: 100%;
 }
@@ -2675,6 +2687,16 @@ video {
 .bg-green-300{
   --tw-bg-opacity: 1;
   background-color: rgb(134 239 172 / var(--tw-bg-opacity));
+}
+
+.bg-red-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
+.bg-red-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
 }
 
 .object-cover{
