--- a/styles.css
+++ b/styles.css
@@ -1973,6 +1973,18 @@ video {
   right: 0.5rem;
 }
 
+.bottom-2{
+  bottom: 0.5rem;
+}
+
+.bottom-1{
+  bottom: 0.25rem;
+}
+
+.bottom-4{
+  bottom: 1rem;
+}
+
 .-z-10{
   z-index: -10;
 }
@@ -2197,6 +2209,18 @@ video {
   height: ;
 }
 
+.h-\[dvh\]{
+  height: dvh;
+}
+
+.h-4{
+  height: 1rem;
+}
+
+.h-2{
+  height: 0.5rem;
+}
+
 .w-10{
   width: 2.5rem;
 }
@@ -2293,6 +2317,14 @@ video {
   width: 100dv;
 }
 
+.w-4{
+  width: 1rem;
+}
+
+.w-2{
+  width: 0.5rem;
+}
+
 .min-w-20{
   min-width: 5rem;
 }
@@ -2374,6 +2406,11 @@ video {
 
 .translate-x-\[25\%\]{
   --tw-translate-x: 25%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-\[\]{
+  --tw-translate-x: ;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
