--- a/styles.css
+++ b/styles.css
@@ -1154,6 +1154,12 @@ button:disabled:hover {
   font-size: .9rem;
 }
 
+.table thead:nth-child(2) {
+  background-color: var(--primary-900);
+  text-align: center;
+  color: white;
+}
+
 .table thead {
   background-color: var(--primary-50);
   text-align: left;
@@ -1168,7 +1174,7 @@ button:disabled:hover {
   border-bottom: 1px solid var(--body-50);
 }
 
-.table tr:hover {
+.table tbody tr:hover {
   background-color: var(--primary-50);
   transition: .2s;
 }
@@ -1929,6 +1935,10 @@ video {
   bottom: 0px;
 }
 
+.bottom-4{
+  bottom: 1rem;
+}
+
 .left-1{
   left: 0.25rem;
 }
@@ -1937,8 +1947,16 @@ video {
   left: 0.5rem;
 }
 
+.left-\[50\%\]{
+  left: 50%;
+}
+
 .right-0{
   right: 0px;
+}
+
+.right-2{
+  right: 0.5rem;
 }
 
 .top-0{
@@ -1949,6 +1967,10 @@ video {
   top: 3rem;
 }
 
+.top-3{
+  top: 0.75rem;
+}
+
 .top-\[\.3rem\]{
   top: .3rem;
 }
@@ -1957,32 +1979,12 @@ video {
   top: .75rem;
 }
 
-.top-6{
-  top: 1.5rem;
+.top-\[50\]{
+  top: 50;
 }
 
-.left-0{
-  left: 0px;
-}
-
-.left-\[50\%\]{
-  left: 50%;
-}
-
-.right-2{
-  right: 0.5rem;
-}
-
-.bottom-2{
-  bottom: 0.5rem;
-}
-
-.bottom-1{
-  bottom: 0.25rem;
-}
-
-.bottom-4{
-  bottom: 1rem;
+.top-\[50\%\]{
+  top: 50%;
 }
 
 .-z-10{
@@ -2021,20 +2023,8 @@ video {
   grid-column: span 7 / span 7;
 }
 
-.col-span-4{
-  grid-column: span 4 / span 4;
-}
-
-.col-span-5{
-  grid-column: span 5 / span 5;
-}
-
 .row-span-1{
   grid-row: span 1 / span 1;
-}
-
-.row-span-5{
-  grid-row: span 5 / span 5;
 }
 
 .row-span-6{
@@ -2045,8 +2035,8 @@ video {
   margin-top: -0.5rem;
 }
 
-.-mt-5{
-  margin-top: -1.25rem;
+.-mt-4{
+  margin-top: -1rem;
 }
 
 .mb-2{
@@ -2081,38 +2071,6 @@ video {
   margin-top: 2rem;
 }
 
-.-mt-4{
-  margin-top: -1rem;
-}
-
-.mt-16{
-  margin-top: 4rem;
-}
-
-.mt-\[3\.5rem\]{
-  margin-top: 3.5rem;
-}
-
-.mt-\[3\.8rem\]{
-  margin-top: 3.8rem;
-}
-
-.mt-\[3\.7rem\]{
-  margin-top: 3.7rem;
-}
-
-.mt-\[7rem3\.\]{
-  margin-top: 7rem3.;
-}
-
-.mt-\[7rem\]{
-  margin-top: 7rem;
-}
-
-.mt-\[\.7rem\]{
-  margin-top: .7rem;
-}
-
 .mt-\[\.5rem\]{
   margin-top: .5rem;
 }
@@ -2143,6 +2101,10 @@ video {
 
 .h-12{
   height: 3rem;
+}
+
+.h-24{
+  height: 6rem;
 }
 
 .h-28{
@@ -2181,12 +2143,12 @@ video {
   height: 1.9rem;
 }
 
-.h-\[25rem\]{
-  height: 25rem;
+.h-\[100dvh\]{
+  height: 100dvh;
 }
 
-.h-\[88dvh\]{
-  height: 88dvh;
+.h-\[25rem\]{
+  height: 25rem;
 }
 
 .h-full{
@@ -2197,36 +2159,20 @@ video {
   height: 100vh;
 }
 
-.h-\[100dvh\]{
-  height: 100dvh;
-}
-
 .h-80{
   height: 20rem;
 }
 
-.h-\[\]{
-  height: ;
+.h-40{
+  height: 10rem;
 }
 
-.h-\[dvh\]{
-  height: dvh;
-}
-
-.h-4{
-  height: 1rem;
-}
-
-.h-2{
-  height: 0.5rem;
+.h-60{
+  height: 15rem;
 }
 
 .w-10{
   width: 2.5rem;
-}
-
-.w-12{
-  width: 3rem;
 }
 
 .w-16{
@@ -2257,6 +2203,10 @@ video {
   width: 1.25rem;
 }
 
+.w-52{
+  width: 13rem;
+}
+
 .w-7{
   width: 1.75rem;
 }
@@ -2275,6 +2225,10 @@ video {
 
 .w-\[100\%\]{
   width: 100%;
+}
+
+.w-\[100dvw\]{
+  width: 100dvw;
 }
 
 .w-\[16rem\]{
@@ -2301,44 +2255,12 @@ video {
   width: 100vw;
 }
 
-.w-\[100dvw\]{
-  width: 100dvw;
-}
-
-.w-\[dvw\]{
-  width: dvw;
-}
-
-.w-\[95dvw\]{
-  width: 95dvw;
-}
-
-.w-\[100dv\]{
-  width: 100dv;
-}
-
-.w-4{
-  width: 1rem;
-}
-
-.w-2{
-  width: 0.5rem;
-}
-
-.min-w-20{
-  min-width: 5rem;
+.w-60{
+  width: 15rem;
 }
 
 .min-w-16{
   min-width: 4rem;
-}
-
-.min-w-12{
-  min-width: 3rem;
-}
-
-.max-w-full{
-  max-width: 100%;
 }
 
 .shrink-0{
@@ -2349,23 +2271,13 @@ video {
   flex-grow: 1;
 }
 
-.-translate-y-\[\.75rem\]{
-  --tw-translate-y: -.75rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-\[-50\%\]{
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-\[50\%\]{
-  --tw-translate-x: 50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .-translate-x-\[50\%\]{
   --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-\[\.75rem\]{
+  --tw-translate-y: -.75rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -2374,43 +2286,33 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-x-\[10\%\]{
-  --tw-translate-x: -10%;
+.-translate-y-\[10\%\]{
+  --tw-translate-y: -10%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-x-\[100\%\]{
-  --tw-translate-x: -100%;
+.rotate-90{
+  --tw-rotate: 90deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-x-\[-100\%\]{
-  --tw-translate-x: 100%;
+.rotate-180{
+  --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-x-\[-100\%\]{
-  --tw-translate-x: -100%;
+.rotate-\[-90deg\]{
+  --tw-rotate: -90deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-x-\[80\%\]{
-  --tw-translate-x: -80%;
+.rotate-\[270px\]{
+  --tw-rotate: 270px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-x-\[0\%\]{
-  --tw-translate-x: -0%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-\[25\%\]{
-  --tw-translate-x: 25%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-\[\]{
-  --tw-translate-x: ;
+.rotate-\[270deg\]{
+  --tw-rotate: 270deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -2418,12 +2320,12 @@ video {
   cursor: context-menu;
 }
 
-.cursor-pointer{
-  cursor: pointer;
-}
-
 .cursor-not-allowed{
   cursor: not-allowed;
+}
+
+.cursor-pointer{
+  cursor: pointer;
 }
 
 .select-none{
@@ -2456,18 +2358,6 @@ video {
   grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
-.grid-cols-6{
-  grid-template-columns: repeat(6, minmax(0, 1fr));
-}
-
-.grid-cols-7{
-  grid-template-columns: repeat(7, minmax(0, 1fr));
-}
-
-.grid-rows-6{
-  grid-template-rows: repeat(6, minmax(0, 1fr));
-}
-
 .grid-rows-7{
   grid-template-rows: repeat(7, minmax(0, 1fr));
 }
@@ -2482,6 +2372,10 @@ video {
 
 .items-start{
   align-items: flex-start;
+}
+
+.items-end{
+  align-items: flex-end;
 }
 
 .items-center{
@@ -2546,30 +2440,6 @@ video {
   row-gap: 1.25rem;
 }
 
-.space-x-1 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-2 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-3 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-7 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.75rem * var(--tw-space-x-reverse));
-  margin-left: calc(1.75rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .overflow-hidden{
   overflow: hidden;
 }
@@ -2602,6 +2472,11 @@ video {
   border-radius: 9999px;
 }
 
+.rounded-l{
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+
 .rounded-r-full{
   border-top-right-radius: 9999px;
   border-bottom-right-radius: 9999px;
@@ -2610,11 +2485,6 @@ video {
 .rounded-t{
   border-top-left-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
-}
-
-.rounded-l{
-  border-top-left-radius: 0.25rem;
-  border-bottom-left-radius: 0.25rem;
 }
 
 .rounded-br{
@@ -2714,34 +2584,14 @@ video {
   background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 
-.bg-blue-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
-}
-
 .bg-blue-200{
   --tw-bg-opacity: 1;
   background-color: rgb(191 219 254 / var(--tw-bg-opacity));
 }
 
-.bg-red-50{
+.bg-blue-100{
   --tw-bg-opacity: 1;
-  background-color: rgb(254 242 242 / var(--tw-bg-opacity));
-}
-
-.bg-green-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
-}
-
-.bg-red-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
-}
-
-.bg-red-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+  background-color: rgb(219 234 254 / var(--tw-bg-opacity));
 }
 
 .object-cover{
@@ -2784,14 +2634,14 @@ video {
   padding-right: 1rem;
 }
 
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .py-16{
   padding-top: 4rem;
   padding-bottom: 4rem;
-}
-
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 
 .py-3{
@@ -2799,18 +2649,12 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.px-1{
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
-.py-1{
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
 .pb-10{
   padding-bottom: 2.5rem;
+}
+
+.pb-16{
+  padding-bottom: 4rem;
 }
 
 .pb-4{
@@ -2827,6 +2671,10 @@ video {
 
 .pl-7{
   padding-left: 1.75rem;
+}
+
+.pl-8{
+  padding-left: 2rem;
 }
 
 .pr-1{
@@ -2847,22 +2695,6 @@ video {
 
 .pt-10{
   padding-top: 2.5rem;
-}
-
-.pb-5{
-  padding-bottom: 1.25rem;
-}
-
-.pb-20{
-  padding-bottom: 5rem;
-}
-
-.pb-1{
-  padding-bottom: 0.25rem;
-}
-
-.pb-16{
-  padding-bottom: 4rem;
 }
 
 .text-left{
@@ -3033,11 +2865,6 @@ body {
   background-color: var(--primary-700);
 }
 
-.hover\:bg-red-500:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
 .hover\:font-semibold:hover{
   font-weight: 600;
 }
@@ -3055,9 +2882,9 @@ body {
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
-.hover\:text-white:hover{
+.hover\:text-green-500:hover{
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover{
@@ -3077,6 +2904,10 @@ body {
     display: grid;
   }
 
+  .md\:w-72{
+    width: 18rem;
+  }
+
   .md\:w-\[30rem\]{
     width: 30rem;
   }
@@ -3091,6 +2922,26 @@ body {
 
   .md\:w-full{
     width: 100%;
+  }
+
+  .md\:w-80{
+    width: 20rem;
+  }
+
+  .md\:w-8{
+    width: 2rem;
+  }
+
+  .md\:w-9{
+    width: 2.25rem;
+  }
+
+  .md\:w-96{
+    width: 24rem;
+  }
+
+  .md\:w-\[32rem\]{
+    width: 32rem;
   }
 
   .md\:grid-cols-2{
@@ -3112,11 +2963,6 @@ body {
 
   .md\:self-center{
     align-self: center;
-  }
-
-  .md\:bg-blue-400{
-    --tw-bg-opacity: 1;
-    background-color: rgb(96 165 250 / var(--tw-bg-opacity));
   }
 
   .md\:text-left{
@@ -3149,14 +2995,6 @@ body {
     top: 0px;
   }
 
-  .lg\:top-5{
-    top: 1.25rem;
-  }
-
-  .lg\:top-6{
-    top: 1.5rem;
-  }
-
   .lg\:-z-10{
     z-index: -10;
   }
@@ -3173,36 +3011,12 @@ body {
     grid-column: span 3 / span 3;
   }
 
-  .lg\:row-span-5{
-    grid-row: span 5 / span 5;
-  }
-
-  .lg\:row-span-2{
-    grid-row: span 2 / span 2;
-  }
-
   .lg\:row-span-1{
     grid-row: span 1 / span 1;
   }
 
-  .lg\:mt-4{
-    margin-top: 1rem;
-  }
-
-  .lg\:mt-5{
-    margin-top: 1.25rem;
-  }
-
-  .lg\:mt-10{
-    margin-top: 2.5rem;
-  }
-
-  .lg\:mt-16{
-    margin-top: 4rem;
-  }
-
-  .lg\:mt-14{
-    margin-top: 3.5rem;
+  .lg\:row-span-5{
+    grid-row: span 5 / span 5;
   }
 
   .lg\:block{
@@ -3217,28 +3031,16 @@ body {
     display: none;
   }
 
-  .lg\:h-\[100\%\]{
-    height: 100%;
-  }
-
   .lg\:h-8{
     height: 2rem;
   }
 
-  .lg\:h-4{
-    height: 1rem;
+  .lg\:h-\[100\%\]{
+    height: 100%;
   }
 
-  .lg\:h-6{
-    height: 1.5rem;
-  }
-
-  .lg\:h-7{
-    height: 1.75rem;
-  }
-
-  .lg\:h-auto{
-    height: auto;
+  .lg\:h-\[unset\]{
+    height: unset;
   }
 
   .lg\:w-24{
@@ -3265,25 +3067,12 @@ body {
     width: 100%;
   }
 
-  .lg\:-translate-x-0{
-    --tw-translate-x: -0px;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
   .lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:grid-cols-4{
     grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
-  .lg\:grid-cols-5{
-    grid-template-columns: repeat(5, minmax(0, 1fr));
-  }
-
-  .lg\:grid-rows-8{
-    grid-template-rows: repeat(8, minmax(0, 1fr));
   }
 
   .lg\:grid-rows-6{
@@ -3327,11 +3116,6 @@ body {
     border-color: rgb(148 163 184 / var(--tw-border-opacity));
   }
 
-  .lg\:bg-blue-400{
-    --tw-bg-opacity: 1;
-    background-color: rgb(96 165 250 / var(--tw-bg-opacity));
-  }
-
   .lg\:p-1{
     padding: 0.25rem;
   }
@@ -3355,10 +3139,6 @@ body {
 
   .lg\:text-\[0\.8rem\]{
     font-size: 0.8rem;
-  }
-
-  .lg\:text-\[\]{
-    color: ;
   }
 
   .lg\:shadow-lg{
@@ -3415,6 +3195,10 @@ body {
     display: none;
   }
 
+  .xl\:h-36{
+    height: 9rem;
+  }
+
   .xl\:h-full{
     height: 100%;
   }
@@ -3447,6 +3231,10 @@ body {
     grid-template-columns: repeat(7, minmax(0, 1fr));
   }
 
+  .xl\:flex-col{
+    flex-direction: column;
+  }
+
   .xl\:items-start{
     align-items: flex-start;
   }
@@ -3476,6 +3264,11 @@ body {
   .xl\:text-lg{
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+
+  .xl\:text-sm{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 
   .xl\:shadow-none{
