--- a/styles/advisor/advisor.css
+++ b/styles/advisor/advisor.css
@@ -30,7 +30,7 @@
 }
 
 #class-list-container {
-    height: calc(100dvh - 8rem);
+    min-height: calc(100dvh - 8rem);
 }
 
 .list-div > h1 {
@@ -42,6 +42,35 @@
     width: 100%;
 }
 
+#advisor-results > a.active {
+    position: relative;
+    color: var(--body-300);
+}
+
+#advisor-results>a.active:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background-color: var(--primary);
+    bottom: -.5rem;
+}
+
+#advisor-results-container {
+    height: calc(100dvh - 17.5rem);
+    overflow: scroll;
+}
+
+#advisor-results-container-single {
+    height: calc(100dvh - 18rem);
+    overflow: scroll;
+}
+
+#advisor-results-container-cgpa-summary {
+    height: calc(100dvh - 14rem);
+    overflow: scroll;
+}
+
 
 @media (min-width: 768px) {
     #student-course-details-home {
@@ -51,6 +80,10 @@
         box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
         border-color: rgb(148 163 184 / 1);
     }
+
+    #advisor-results-container {
+        height: calc(100dvh - 14rem)
+    }
 }
 
 @media (min-width: 1024px) {
@@ -59,11 +92,11 @@
     }
 
     #full-student-details {
-        height: calc(100dvh - 4.8rem)
+        min-height: calc(100dvh - 4.8rem);
     }
 
     #chart-container {
-        height: calc(100dvh - 25.5rem)
+        min-height: calc(100dvh - 25.5rem);
     }
 
     .list-div>h1 {
