--- a/styles.css
+++ b/styles.css
@@ -2279,6 +2279,14 @@ video {
   width: 100vw;
 }
 
+.w-12{
+  width: 3rem;
+}
+
+.w-\[1-0\]{
+  width: 1-0;
+}
+
 .min-w-10{
   min-width: 2.5rem;
 }
@@ -2634,6 +2642,16 @@ video {
   background-color: var(--warning);
 }
 
+.bg-red-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+}
+
+.bg-red-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
@@ -2949,6 +2967,10 @@ body {
 
 .hover\:bg-\[var\(--warning-600\)\]:hover{
   background-color: var(--warning-600);
+}
+
+.hover\:bg-\[var\(--secondary-700\)\]:hover{
+  background-color: var(--secondary-700);
 }
 
 .hover\:font-semibold:hover{
